# weather-data

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
docs/: Technical_Task.md  weather_data.conf
include/: json_parse.h  parse_weather_driver.h  payload_parser.h  weather_data.h
include/data/: weather_archive.h  weather_data.h
src/: parse_weather.cpp
src/weather_data/: json_parse.cpp  parse_weather_driver.cpp  payload_parser.cpp
src/weather_data/data/: weather_archive.cpp  weather_data.cpp
test/: example_weather.json  json_parse_test.cpp  payload_parser_test.cpp  weather_archive_test.cpp
